<resources>
    <string name="app_name">TagAlong</string>
    <string name="email">Email</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="NoAccount">Don\'t have an account..?</string>
    <string name="SignUp">Sign Up</string>
    <string name="forgotPass">Forgot?</string>
    <string name="Or">OR</string>
    <string name="FacebookLogin">LOGIN WITH FACEBOOK</string>
    <string name="BarCheck">|</string>
    <string name="createnewAccount">CREATING NEW ACCOUNT</string>
    <string name="cantrememberpasswrd">Can\'t remember your password ?</string>
    <string name="sendButton">Send</string>
    <string name="chatItem">Chat</string>
    <string name="NotiItem">Notification</string>
    <string name="home">Home</string>
    <string name="myrides">MYRIDES</string>
    <string name="my_profile">My Profile</string>
    <string name="my_car">My car</string>
    <string name="facebook_app_id">1873956666169545</string>
    <string name="my_booking">My booking</string>
    <string name="my_dashboard">My dashboard</string>
    <string name="find_ride">Find a rind</string>
    <string name="offer_a_ride">Offer a ride</string>
    <string name="setting">Settings</string>
    <string name="how_it_work">How it works?</string>
    <string name="latest_ride">Latest ride</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_a_ride_cap">FIND A RIDE</string>
    <string name="offer_a_ride_cap">OFFER A RIDE</string>
    <string name="as_a_driver">AS A DRIVER</string>
    <string name="as_a_offer">As A BOOKER</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_a_date">Select a Date</string>
    <string name="how_you_want_to_offer_this_ride">How do you want to offer this ride?</string>
    <string name="one_way_trip">One way ride</string>
    <string name="round_trip">Round ride</string>
    <string name="rideTotal">6</string>
    <string name="RidesOffersTextView">Rides Offer</string>
    <string name="ProfileName">JON DOE</string>
    <string name="MemberTextView">Member Since</string>
    <string name="MemberTextViewValue">6 Jul 2016</string>
    <string name="GenderTextView">Gender</string>
    <string name="GenderTextViewValue">Male</string>
    <string name="PreferencesTextView">Preferences</string>
    <string name="smokeString">No Smoking</string>
    <string name="PetString">No Pets</string>
    <string name="ChatString">I am quiet type</string>
    <string name="MusicString">Silence is golden</string>
    <string name="RidesPostedTextView">Rides Posted</string>
    <string name="rides">Rides Offer</string>
    <string name="fromTextView">Delhi,India</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="seat">SEAT</string>
    <string name="myCarTextView">My Car</string>
    <string name="comfortTextView">Comfort</string>
    <string name="addNewCarButton">ADD NEW CAR</string>
    <string name="car_plate_number">JKQ56</string>
    <string name="makecarEditText">Make</string>
    <string name="modelcarEditText">Model</string>
    <string name="comfortcarEditText">Comfort</string>
    <string name="seatNumbercarEditText">Number of Seat</string>
    <string name="colorcarEditText">Color</string>
    <string name="typecarEditText">Type</string>
    <string name="Save">Save</string>
    <string name="can_t_find_rides_for_you">Can\'t Find rides for you..?</string>
    <string name="add_stop">Add stop over</string>
    <string name="departure_date">Departure date</string>
    <string name="departure_time">Departure time</string>
    <string name="enter_price">Enter price</string>
    <string name="total_distance">Total distance :</string>
    <string name="suggested_prince">Suggested prince :</string>
    <string name="next">NEXT</string>
    <string name="return_date">Return date</string>
    <string name="return_time">Return time</string>
    <string name="add_return_stop">Add return stop over</string>
    <string name="car_detail">Car Details</string>
    <string name="car_details">Car details</string>
    <string name="select_car">Select your car</string>
    <string name="seat_available">Seat Available</string>
    <string name="luggage_space">Luggage Space</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="ride_detail">Ride details</string>
    <string name="i_will_leave">I will leave</string>
    <string name="in_15_min_window">In 15 min window</string>
    <string name="i_hereby_certified_that_i_hold_a_driving_license_and_a_valid_car_isurance">I hereby certified that I hold a driving license and a valid car isurance.</string>
    <string name="publish">PUBLISH THIS RIDE</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dob">DOB</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="language">Language</string>
    <string name="quick_description">Quick description</string>
    <string name="preference">Preferences</string>
    <string name="save">SAVE</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="new_cards">New Cards</string>
    <string name="pay">PAY</string>
    <string name="cardIdEdidText">7878-2334-3435-3456</string>
    <string name="userNameTextView">NAME :</string>
    <string name="expDateTextView">EXP DATE :</string>
    <string name="cardExpireEditText">06 / 23</string>
    <string name="cvvTextView">CVV :</string>
    <string name="cvvEditText">566</string>
    <string name="pay_via_netbanking">Pay Via netbanking</string>
    <string name="pay_via_wallet">Pay via Wallet</string>
    <string name="my_bookings">My Booking</string>
    <string name="rides_offer">Ride offered</string>
    <string name="money_saved">Money Saved</string>
    <string name="my_alert">My alert</string>
    <string name="paid_by_you">Paid by You</string>
    <string name="ratings">Rating</string>
    <string name="search">Search</string>
    <string name="mychat">My Chat</string>
    <string name="you">You</string>
    <string name="dummy">There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..</string>
    <string name="rides_available">RIDES AVAILABLE</string>
    <string name="filter">Filter</string>
    <string name="departure_from">Departure From</string>
    <string name="Destination">Destination</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="picture">Pictures</string>
    <string name="ride_type">Ride type</string>
    <string name="car_comfort">Car comfort</string>
    <string name="rating">Rating</string>
    <string name="apply">Apply</string>
    <string name="cant_find_ride">CAN\'T FIND RIDE</string>
    <string name="apply_filter">APPLY FILTER</string>
    <string name="select_car_comfort">Select car comfort</string>
    <string name="all_type">All Type</string>
    <string name="basic">Basic</string>
    <string name="normal">Normal</string>
    <string name="comfortable">Comfortable</string>
    <string name="luxury">Luxury</string>
    <string name="booking_no">Booking No :</string>
    <string name="seat_required">Seat Required</string>
    <string name="proceed_to_check_out">Proceed to check out</string>
    <string name="bookingseat">BOOKING SEAT</string>
    <string name="suggested_price">Suggested Price</string>
    <string name="user_dob">18-04-1990</string>
    <string name="selecttimeframe">Choose your departure time</string>
    <string name="selectratingframe">Choose rating</string>
    <string name="ratingtext">(0)</string>
    <string name="select_price_range">Select Price Range</string>
    <string name="all_price">All Price</string>
    <string name="highprice">High Price</string>
    <string name="averageprice">Average Price</string>
    <string name="lowprice">Low Price</string>
    <string name="select_withourWithout_picture">Select With or Without Picture</string>
    <string name="alloptions">All</string>
    <string name="withpiture">With Picture Only</string>
    <string name="select_ride_type">Select Ride Type</string>
    <string name="allride">All Ride</string>
    <string name="ladyonly">Lady Only</string>
    <string name="shoppingride">Shopping Rides</string>
    <string name="title_activity_maps">Map</string>
    <string name="audi_q7">Audi Q7</string>
    <string name="_4">Seat 4</string>
    <string name="comfort">Comfort</string>
    <string name="mycars">My Cars</string>
    <string name="add_new_car">Add New Car</string>
    <string name="registercar">Register New Car</string>
    <string name="schedule">schedule</string>
    <string name="detour">Detour</string>
    <string name="cardetails">CarDetails</string>
    <string name="carbrand">Brand : </string>
    <string name="cartype">Type : </string>
    <string name="plateno">Plate No :</string>
    <string name="carcomfort">Comfort : </string>
    <string name="bookthisride">Book this Ride</string>
    <string name="rideDetail">ride Detail</string>
    <string name="rideDetails">Ride Details</string>
    <string name="lang_eng">English</string>
    <string name="lang_hindi">Hindi</string>
    <string name="lang_tib">Tibetan</string>
    <string name="webservice_api_url">https://tag-along.net/webservice.php</string>
    <string name="giverating"> <u>Give Rating</u></string>
    <string name="message"><u>Message</u></string>
    <string name="preference_tagalong">Tagalong</string>
    <string name="Logout">Logout</string>
   <string name="lauggagesize">Luggage Size :</string>
    <string name="avail">(Available)</string>
    <string name="brand">Brand   :</string>
    <string name="type">Type   :</string>

</resources>
