<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.netforceinfotech.tagalong.home.findride.applyfilter.PicturesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_withourWithout_picture"
            android:textColor="@color/colorTextSecondary" />

        <RadioGroup
            android:layout_marginTop="16dp"
            android:id="@+id/radio_grp_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alloptions"
                android:textColor="@color/colorTextSecondary" />

            <RadioButton
                android:id="@+id/radioButtonWithPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withpiture"
                android:textColor="@color/colorTextSecondary" />


        </RadioGroup>
    </LinearLayout>

</FrameLayout>
